--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="container">
             <div class="hero-content">
-                <div class="hero-badge">2026 Launch</div>
+               <!-- <div class="hero-badge">2026 Launch</div> -->
                 <h1 class="hero-title">
                     Regional Migrant Response Plan
                     for Horn of Africa to Yemen and Southern Africa
@@ -178,23 +178,23 @@
                         <div class="metric-bars">
                             <div class="metric-bar">
                                 <div class="bar-fill" style="width: 92%;" data-value="92"></div>
-                                <span class="bar-label">Pillar1</span>
+                                <span class="bar-label">Provide Life‑Saving Humanitarian Assistance</span>
                             </div>
                             <div class="metric-bar">
                                 <div class="bar-fill" style="width: 85%;" data-value="85"></div>
-                                <span class="bar-label">Pillar2</span>
+                                <span class="bar-label">Provide Protection Assistance & Uphold Migrants’ Rights</span>
                             </div>
                             <div class="metric-bar">
                                 <div class="bar-fill" style="width: 88%;" data-value="88"></div>
-                                <span class="bar-label">Pillar3</span>
+                                <span class="bar-label">Strengthen Access to Return, Sustainable Reintegration & Community Stabilization</span>
                             </div>
                             <div class="metric-bar">
                                 <div class="bar-fill" style="width: 78%;" data-value="78"></div>
-                                <span class="bar-label">Pillar4</span>
+                                <span class="bar-label">Build Evidence, Partnerships & Coordination</span>
                             </div>
                         </div>
                     </div>
-                    <h3>Service Delivery</h3>
+                    <h3>assistance</h3>
                     <p>Multi-sector assistance across protection, health, shelter, and WASH</p>
                 </div>
                 
@@ -274,12 +274,12 @@
                     </div>
                 </div>
                 
-                <div class="map-visual">
+               <!--<div class="map-visual">
                     <div class="map-placeholder">
                         <!-- Interactive map will be placed here -->
                         <div class="map-overlay-text">Interactive Regional Map</div>
-                    </div>
-                </div>
+                    </div> 
+                </div> -->
             </div>
         </div>
     </section>
